--- a/blog-react/src/css/searchbar.css
+++ b/blog-react/src/css/searchbar.css
@@ -1,68 +1,100 @@
+
+.search {
+  width: 60px;
+  height: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+a {
+  text-decoration: none;
+}
+
+#clearBtn {
+  cursor: pointer;
+}
+
 .searchInputs {
-    margin-top: 105px;
-    display: flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.search input {
+  background-color: white;
+  border: 0;
+  border-radius: 2px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  font-size: 18px;
+  padding: 15px;
+  height: 30px;
+  width: 200px;
+}
+
+.searchIcon > button {
+  width: 50px;
+  height: 34px;
+  border-radius: 4px;
+  border: none;
+}
+
+.dataResult {
+  width: 247px;
+  position: absolute;
+  top: 30px;
+  background-color: aliceblue;
+  display: none;
+}
+
+.dataResult > a > p {
+  height: 30px;
+  /* padding: 1.2rem; */
+  text-align: center;
+}
+
+.dataResult > a:hover {
+  background-color: #abaaaa;
+}
+
+
+#searchInputs{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 45px;
+  right: 10px;
+}
+
+#dataResult{
+  width: 247px;
+  position: absolute;
+  top: 77px;
+  background-color: aliceblue;
+  display: block;
+  right: 10px;
+}
+
+@media only screen and (max-width: 660px) {
+  .search-bar {
+    position: absolute;
+    top: 34px;
   }
-  
-  .search input {
-    background-color: white;
-    border: 0;
-    border-radius: 2px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 18px;
-    padding: 15px;
-    height: 30px;
-    width: 300px;
+  #searchInputs {
+    top: 82px;
+    right: 2px;
   }
-  
-  .searchIcon {
-    height: 60px;
-    width: 50px;
-    background-color: white;
-    display: grid;
-    place-items: center;
+  #dataResult {
+    top: 118px;
+    right: 2px;
+    z-index: 10;
   }
-  
-  input:focus {
-    outline: none;
-  }
-  .searchIcon svg {
-    font-size: 35px;
-  }
-  
-  .dataResult {
-    margin-top: 5px;
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    overflow: hidden;
-    overflow-y: auto;
-  }
-  
-  .dataResult::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .dataResult .dataItem {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    color: black;
-  }
-  
-  .dataItem p {
-    margin-left: 10px;
-  }
-  a {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    background-color: lightgrey;
-  }
-  
-  #clearBtn {
-    cursor: pointer;
-  }
+}
+
+.pointer {
+  cursor: pointer;
+}
