--- a/blog-react/src/css/home.css
+++ b/blog-react/src/css/home.css
@@ -310,4 +310,28 @@
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
     font-size: 14px;
+    display: flex;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer >div  {
+    width: 20%;
+    display: flex;
+    margin: .42rem;
+    justify-content: space-between;
+    color: rgba(255, 158, 158, 0.363);
+    /* padding: .2rem; */
+}
+
+.footer >div  > div {
+    display: flex;
+    flex-direction: column;
+    padding: .8rem;
+}
+
+.footer >div  > div > a {
+    padding: 1.2rem;
+    color: rgba(255, 158, 158, 0.363);
 }
